--- a/src/main/resources/application-dev.exapmle.yml
+++ b/src/main/resources/application-dev.exapmle.yml
@@ -3,3 +3,12 @@ spring:
     url: jdbc:postgresql://localhost:5432/bookstore
     username:
     password:
+
+  jpa:
+    properties:
+      hibernate.format_sql: true
+
+logging:
+  level:
+    org.hibernate.SQL: TRACE
+    org.hibernate.type.descriptor.sql: TRACE
