--- a/src/main/resources/application-dev.exapmle.yml
+++ b/src/main/resources/application-dev.exapmle.yml
@@ -10,5 +10,6 @@ spring:
 
 logging:
   level:
-    org.hibernate.SQL: TRACE
-    org.hibernate.type.descriptor.sql: TRACE
+    cn.edu.seu.bookstore.mapper: DEBUG
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql: DEBUG
