--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "antd": "^4.16.11",
     "axios": "^0.21.1",
+    "js-cookie": "^3.0.0",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.37.5"
+    "sass": "^1.37.5",
+    "swr": "^0.5.6"
   },
   "devDependencies": {
+    "@types/js-cookie": "^2.2.7",
     "@types/react": "17.0.16",
     "eslint": "7.32.0",
     "eslint-config-next": "11.0.1",
