--- a/pom.xml
+++ b/pom.xml
@@ -8,15 +8,36 @@
         <version>2.5.3</version>
         <relativePath/>
     </parent>
+
     <groupId>cn.edu.seu</groupId>
     <artifactId>labwork-bookstore-server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>labwork-bookstore-server</name>
     <description>labwork-bookstore-server</description>
+
     <properties>
         <java.version>11</java.version>
+        <jwt.version>0.11.2</jwt.version>
     </properties>
+
     <dependencies>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-api</artifactId>
+            <version>${jwt.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-impl</artifactId>
+            <version>${jwt.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-jackson</artifactId>
+            <version>${jwt.version}</version>
+            <scope>runtime</scope>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
