--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "antd": "^4.16.11",
+    "antd": "4.15.6",
     "axios": "^0.21.1",
     "js-cookie": "^3.0.0",
-    "next": "11.0.1",
+    "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.37.5",
@@ -20,9 +20,9 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^2.2.7",
-    "@types/react": "17.0.16",
+    "@types/react": "17.0.17",
     "eslint": "7.32.0",
-    "eslint-config-next": "11.0.1",
+    "eslint-config-next": "11.1.0",
     "eslint-config-prettier": "^8.3.0",
     "typescript": "4.3.5"
   }
