--- a/src/main/resources/application-dev.exapmle.yml
+++ b/src/main/resources/application-dev.exapmle.yml
@@ -14,7 +14,7 @@ logging:
   level:
     cn.edu.seu.bookstore.mapper: DEBUG
     org.hibernate.SQL: DEBUG
-    org.hibernate.type.descriptor.sql: DEBUG
+    org.hibernate.type.descriptor.sql: TRACE
 
 project:
   security:
