--- a/package.json
+++ b/package.json
@@ -9,21 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "antd": "4.16.12",
-    "axios": "^0.21.1",
-    "js-cookie": "^3.0.0",
-    "next": "11.1.0",
+    "antd": "4.16.13",
+    "axios": "^0.24.0",
+    "js-cookie": "^3.0.1",
+    "next": "12.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.38.0",
-    "swr": "^0.5.6"
+    "sass": "^1.43.4",
+    "swr": "^1.0.1"
   },
   "devDependencies": {
-    "@types/js-cookie": "^2.2.7",
-    "@types/react": "17.0.18",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.0",
+    "@types/js-cookie": "^3.0.0",
+    "@types/react": "17.0.34",
+    "eslint": "^7.23.0",
+    "eslint-config-next": "12.0.3",
     "eslint-config-prettier": "^8.3.0",
-    "typescript": "4.3.5"
+    "typescript": "4.4.4"
   }
 }
