--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.5.3</version>
+        <version>2.5.6</version>
         <relativePath/>
     </parent>
 
@@ -18,6 +18,8 @@
     <properties>
         <java.version>11</java.version>
         <jwt.version>0.11.2</jwt.version>
+        <validation-api.version>2.0.1.Final</validation-api.version>
+        <hibernate-validator>7.0.1.Final</hibernate-validator>
     </properties>
 
     <dependencies>
@@ -57,12 +59,12 @@
         <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
-            <version>2.0.1.Final</version>
+            <version>${validation-api.version}</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>7.0.1.Final</version>
+            <version>${hibernate-validator}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
