--- a/nginx.conf
+++ b/nginx.conf
@@ -10,5 +10,13 @@ server {
     location /api/ {
         proxy_pass http://host.docker.internal:9090/;
     }
+
+    location /_next/ {
+        proxy_pass http://host.docker.internal:3000/_next/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header Host $host;
+    }
 }
 
