--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "API_BASE_URL=http://localhost:8000 next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "API_BASE_URL=http://150.158.135.105:8000 next start",
     "lint": "next lint"
   },
   "dependencies": {
