--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,7 @@
             <version>${validation-api.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.hibernate</groupId>
+            <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
             <version>${hibernate-validator}</version>
         </dependency>
