--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "antd": "4.16.13",
     "axios": "^0.24.0",
+    "decimal.js": "^10.3.1",
     "js-cookie": "^3.0.1",
     "next": "12.0.3",
     "react": "17.0.2",
